src/tui/snapshots/mysteries__tui__render__tests__tui_tool_card_edit_diff_body.snap
---
source: src/tui/render.rs
expression: text
---
‹text.secondary +bold›✦ mysteries‹/›‹text.muted›  agent · v1.3.0‹/›

‹border.strong›────────────────────────────────────────────────────────────────────────────────‹/›
‹border.subtle›┌─ ‹/›‹success.fg›✓‹/›‹text.muted› ‹/›‹accent.primary +bold›edit_file‹/›‹text.muted› path=src/config.rs‹/›
‹border.subtle›│ ‹/›‹error.fg›− timeout = 10‹/›
‹border.subtle›│ ‹/›‹error.fg›− retries = 1‹/›
‹border.subtle›│ ‹/›‹success.fg›+ timeout = 30‹/›
‹border.subtle›│ ‹/›‹success.fg›+ retries = 3‹/›
‹border.subtle›│ ‹/›‹text.body›edited src/config.rs‹/›
‹border.subtle›└───────────────────────────────────────────────────────────────────────────────‹/›








‹text.muted›◇ 就绪‹/›
‹border.subtle›┌──────────────────────────────────────────────────────────────────────────────┐‹/›
‹border.subtle›│‹/›‹accent.primary›> ‹/›‹text.primary›                                                     ‹/›‹text.muted›输入任务,或 / 执行命令…‹/›‹border.subtle›│‹/›
‹border.subtle›└──────────────────────────────────────────────────────────────────────────────┘‹/›
‹text.muted›mock · mock-model · iter 0/4 · 0 msgs · .‹/›
‹text.muted›▸ normal · shift+tab 切换 · think low‹/›
