src/tui/snapshots/mysteries__tui__render__tests__tui_tool_card_error.snap
---
source: src/tui/render.rs
expression: text
---
‹text.secondary +bold›✦ mysteries‹/›‹text.muted›  agent · v1.0‹/›

‹border.strong›────────────────────────────────────────────────────────────────────────────────‹/›
‹border.subtle›┌─ ‹/›‹error.fg›✗‹/›‹text.muted› ‹/›‹accent.primary +bold›run_shell‹/›‹text.muted› {"path":"note.txt"}‹/›‹text.secondary› · 1 行 ⌄‹/›
















‹text.secondary›status: ‹/›‹text.muted›◇ 就绪                         mock · mock-model · iter 0/4 · 0 msgs · .‹/›
‹border.subtle›┌──────────────────────────────────────────────────────────────────────────────┐‹/›
‹border.subtle›│‹/›‹accent.primary›mysteries ▸ ‹/›‹text.muted›输入任务,或 / 执行命令…‹/›‹text.primary›                                           ‹/›‹border.subtle›│‹/›
‹border.subtle›└──────────────────────────────────────────────────────────────────────────────┘‹/›
