src/tui/snapshots/mysteries__tui__render__tests__tui_tool_group_ctrl_o_hints.snap
---
source: src/tui/render.rs
expression: text
---
‹text.secondary +bold›✦ mysteries‹/›‹text.muted›  agent · v1.0‹/›

‹border.strong›────────────────────────────────────────────────────────────────────────────────‹/›
‹accent.primary›> ‹/›‹text.primary›先做 read‹/›

‹success.fg›✓‹/›‹text.muted› ‹/›‹accent.primary +bold›read_file‹/›‹text.muted› path=note.txt‹/›‹text.secondary›  只读 · 自动运行 · 2 行 ⌄‹/›‹text.muted› · ctrl+o 展开‹/›

‹info.fg›◆ ‹/›‹text.body›读完了,再写两个文件‹/›

‹success.fg›✓‹/›‹text.muted› ‹/›‹accent.primary +bold›write_file‹/›‹text.muted› path=note.txt‹/›‹text.secondary› · 1 行 ⌄‹/›‹text.muted› · ctrl+o 展开‹/›
‹success.fg›✓‹/›‹text.muted› ‹/›‹accent.primary +bold›grep‹/›‹text.muted› path=note.txt‹/›‹text.secondary› · 1 行 ⌄‹/›







‹text.muted›◇ 就绪‹/›
‹border.subtle›┌──────────────────────────────────────────────────────────────────────────────┐‹/›
‹border.subtle›│‹/›‹accent.primary›mysteries ▸ ‹/›‹text.muted›输入任务,或 / 执行命令…‹/›‹text.primary›                                           ‹/›‹border.subtle›│‹/›
‹border.subtle›└──────────────────────────────────────────────────────────────────────────────┘‹/›
‹text.muted›mock · mock-model · iter 0/4 · 2 msgs · .‹/›
‹text.muted›▸ normal · shift+tab 切换‹/›
