src/tui/snapshots/mysteries__tui__render__tests__tui_transcript_scroll_window.snap
---
source: src/tui/render.rs
expression: text
---
‹text.secondary +bold›✦ mysteries‹/›‹text.muted›  agent · v1.0‹/›

‹border.strong›────────────────────────────────────────────────────────────────────────────────‹/›
‹accent.primary›> ‹/›‹text.primary›line 14‹/›

‹accent.primary›> ‹/›‹text.primary›line 15‹/›

‹accent.primary›> ‹/›‹text.primary›line 16‹/›

‹accent.primary›> ‹/›‹text.primary›line 17‹/›

‹accent.primary›> ‹/›‹text.primary›line 18‹/›

‹accent.primary›> ‹/›‹text.primary›line 19‹/›

‹accent.primary›> ‹/›‹text.primary›line 20                   ‹/›‹accent.primary bg=bg.surface›跳到底部 (ctrl+End) ↓‹/›


‹text.muted›◇ 就绪‹/›
‹border.subtle›┌──────────────────────────────────────────────────────────────────────────────┐‹/›
‹border.subtle›│‹/›‹accent.primary›> ‹/›‹text.primary›                                                     ‹/›‹text.muted›输入任务,或 / 执行命令…‹/›‹border.subtle›│‹/›
‹border.subtle›└──────────────────────────────────────────────────────────────────────────────┘‹/›
‹text.muted›mock · mock-model · iter 0/4 · 30 msgs · .‹/›
‹text.muted›▸ normal · shift+tab 切换‹/›
